--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
-		"drizzle-orm": "^0.40.0"
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.40.0",
+		"node-fetch": "^3.3.2"
 	}
 }
