--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@libsql/client": "^0.14.0",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.40.0",
+		"lucide-svelte": "^0.487.0",
 		"node-fetch": "^3.3.2"
 	}
 }
